# qx

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  cliff.toml
.github/workflows/: release.yml
crates/qx/: Cargo.toml
crates/qx-core/: Cargo.toml
crates/qx-core/src/: actions.rs  configuration.rs  context.rs  environment.rs  intent.rs  io.rs  lib.rs  resolvable.rs  system.rs
crates/qx-storage/: Cargo.toml
crates/qx-storage/src/: io.rs  lib.rs  models.rs  storage.rs
crates/qx-tui/: Cargo.toml
crates/qx-tui/src/: lib.rs  stateful_list.rs
crates/qx/src/: app.rs  args.rs  main.rs
crates/qx/wix/: main.wxs
examples/: sample.yaml
xtask/: Cargo.toml
xtask/src/: bump_version.rs  main.rs
