[workspace]
members = [
    "crates/qx",
    "crates/qx-core",
    "crates/qx-storage",
    "crates/qx-tui",
    "xtask"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
itertools = "0.13.0"
serde = { version = "1.0.196", features = ["derive"] }
tracing = "0.1.40"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
