[package]
name = "qx-core"
version = "0.3.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
open = "5.0.1"
regex = "1.10.3"

color-eyre = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
url = { version = "2.5.0", features = ["serde"] }
