[package]
name = "qx-tui"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qx-core = { path = "../qx-core" }

crossterm = "0.27.0"
ratatui = "0.25.0"

color-eyre = { workspace = true }
itertools = { workspace = true }
